@@ -11,6 +11,7 @@
     * Added quartz half slab and double slab
     * Added double smooth stone slab
     * Added double smooth sandstone slab
+    * Added redstone block
     * Allow opening read-only region files
     * If sunlight is disabled the sun will not be rendered
     * It is now possible to disable mirroring the sky at the horizon
